--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -100,8 +100,39 @@ body, * {
 .header {
   width: 100%;
 }
+.header-content {
+  justify-content: space-between;
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+}
 .header svg path {
   color: white;
+}
+.header .currency,
+.header .language {
+  position: relative;
+}
+.header-dropdown {
+  position: absolute;
+  top: 4rem;
+  left: 0;
+  background-color: #7E33E0;
+  border: none;
+  border-radius: 5px;
+}
+.header-dropdown-element {
+  color: #fff;
+  padding: 1rem 1.2rem 1.2rem;
+}
+.header-dropdown-element:first-child {
+  border-radius: 5px 5px 0 0;
+}
+.header-dropdown-element:last-child {
+  border-radius: 0 0 5px 5px;
+}
+.header-dropdown-element:hover {
+  background-color: #6a0de3;
 }
 .header-top {
   background-color: #7E33E0;
@@ -115,8 +146,12 @@ body, * {
   display: flex;
   gap: 4.8rem;
 }
-.header-top-left span {
+.header-top-left-element {
   color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 6px;
 }
 .header-top-right {
   display: flex;
@@ -136,11 +171,6 @@ body, * {
 }
 .header-top-right-element:hover {
   background-color: #6a0de3;
-}
-.header-top-right .dropdown {
-  background-color: transparent;
-  color: #fff;
-  border: none;
 }
 .header-top-right .login-btn {
   display: flex;
@@ -165,17 +195,19 @@ body, * {
   align-items: center;
 }
 .header-bottom-left .logo {
-  height: 40px;
-  margin-right: 30px;
+  height: 2.8rem;
+  margin-right: 5rem;
 }
 .header-bottom-left .nav-links {
   display: flex;
   gap: 20px;
 }
-.header-bottom-left .nav-links li {
-  list-style: none;
+.header-bottom-left .nav-links .nav-link {
   cursor: pointer;
-  font-size: 16px;
+  transition: all 0.4s;
+}
+.header-bottom-left .nav-links .nav-link:hover {
+  color: #FB2E86;
 }
 .header-bottom-right {
   display: flex;
