--- a/src/styles/sass/layout/_header.scss
+++ b/src/styles/sass/layout/_header.scss
@@ -3,9 +3,44 @@
 .header {
   width: 100%;
 
+  &-content {
+    justify-content: space-between;
+width: 70%;
+margin: 0 auto;
+    display: flex;
+  }
   svg {
     path {
       color: white;
+    }
+  }
+  .currency,
+  .language {
+    position: relative;
+  }
+
+  &-dropdown {
+    position: absolute;
+    top: 4rem;
+    left: 0;
+    background-color: $color-tertiary;
+
+    border: none;
+    border-radius: 5px;
+
+    &-element {
+      color: $color-white;
+      padding: 1rem 1.2rem 1.2rem;
+      &:first-child {
+        border-radius: 5px 5px 0 0;
+      }
+      &:last-child {
+        border-radius: 0 0 5px 5px;
+      }
+
+      &:hover {
+        background-color: #6a0de3;
+      }
     }
   }
 
@@ -21,8 +56,12 @@
       display: flex;
       gap: 4.8rem;
 
-      span {
+      &-element {
         color: $color-white;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 6px;
       }
     }
 
@@ -45,12 +84,6 @@
         &:hover {
           background-color: #6a0de3;
         }
-      }
-
-      .dropdown {
-        background-color: transparent;
-        color: $color-white;
-        border: none;
       }
 
       .login-btn {
@@ -80,18 +113,20 @@
       align-items: center;
 
       .logo {
-        height: 40px;
-        margin-right: 30px;
+        height: 2.8rem;
+        margin-right: 5rem;
       }
 
       .nav-links {
         display: flex;
         gap: 20px;
 
-        li {
-          list-style: none;
+        .nav-link {
           cursor: pointer;
-          font-size: 16px;
+          transition: all 0.4s;
+          &:hover {
+            color: $color-primary;
+          }
         }
       }
     }
