--- a/src/styles/sass/components/_carousel.scss
+++ b/src/styles/sass/components/_carousel.scss
@@ -3,34 +3,33 @@
   margin: 0 auto;
 }
 
-.hero-content{
-  padding : 19rem 0;
+.hero-content {
+  padding: 19rem 0;
   margin-left: -2rem;
 
   max-width: 56rem;
 
-  &-text{
+  &-text {
     display: flex;
     flex-direction: column;
     gap: 1.6rem;
   }
 
-  .shop-now-button{
+  .shop-now-button {
     margin-top: 2.8rem;
     border-radius: 8px;
-padding: 16px 40px;
-border: 1px solid $color-primary;
-background-color: $color-primary;
-color:$color-white;
-transition: all .2s;
+    padding: 16px 40px;
+    border: 1px solid $color-primary;
+    background-color: $color-primary;
+    color: $color-white;
+    transition: all 0.2s;
 
-&:hover{
-  background-color: $color-white;
-  color: $color-primary;
-}
+    &:hover {
+      background-color: $color-white;
+      color: $color-primary;
+    }
   }
 }
-
 
 .carousel-card {
   padding: 0 5rem 4rem;
@@ -38,31 +37,30 @@ transition: all .2s;
 
   &-content {
     display: flex;
-   
   }
 
-  &-1{
+  &-1 {
     background-color: #f0fffb;
   }
 
-  &-2{
+  &-2 {
     background-color: #fff0f9;
   }
-  .hero{
-    &-subtitle{
+  .hero {
+    &-subtitle {
       color: $color-primary;
     }
     &-image {
-    &-main {
-      margin-left: 10rem;
-      margin-top: 3rem;
-    }
+      &-main {
+        margin-left: 10rem;
+        margin-top: 3rem;
+      }
 
-    &-small {
-      height: 38rem;
+      &-small {
+        height: 38rem;
+      }
     }
   }
-}
 }
 
 .slick-dots {
