--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -16,6 +16,10 @@
 @use "components/top-categories";
 @use "components/newsletter";
 @use "components/latest-blog";
+@use "components/products";
+@use "components/products-card";
+@use "components/product-details";
+@use "components/related-products";
 
 @use "layout/header";
 @use "layout/footer";
