added cart page and functionality

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -20,6 +20,7 @@
 @use "components/products-card";
 @use "components/product-details";
 @use "components/related-products";
+@use "components/cart";
 
 @use "layout/header";
 @use "layout/footer";
