--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1354,6 +1354,163 @@ body, * {
   color: #7E33E0;
 }
 
+.cart-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  padding: 10rem 0;
+}
+.cart-content {
+  display: flex;
+  gap: 13rem;
+}
+.cart-checkout {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  width: 30rem;
+  padding: 3rem;
+  border-radius: 8px;
+  background-color: #F8F8FD;
+}
+.cart-checkout-container {
+  display: flex;
+  flex-direction: column;
+}
+.cart-checkout-line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.cart-checkout-payment {
+  border-radius: 8px;
+  padding: 16px 40px;
+  color: #fff;
+  background-color: #FB2E86;
+  border: 1px solid #FB2E86;
+  transition: all 0.3s;
+}
+.cart-checkout-payment:hover {
+  color: #FB2E86;
+  background-color: #fff;
+}
+.cart-checkout-total p {
+  color: #101750;
+}
+.cart-checkout-total-sub p {
+  color: #101750;
+}
+.cart-clear-button {
+  color: #FB2E86;
+  padding: 1.6rem 4rem;
+  border: none;
+  background-color: #fff;
+  transition: all 0.3s;
+}
+.cart-clear-button:hover {
+  background-color: #F8F8FD;
+}
+.cart-empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+.cart-empty-button {
+  margin-top: 2rem;
+  border-radius: 8px;
+  padding: 16px 40px;
+  background-color: #FB2E86;
+  color: #fff;
+  border: 1px solid #FB2E86;
+  transition: all 0.3s;
+}
+.cart-empty-button:hover {
+  background-color: #fff;
+  color: #FB2E86;
+}
+.cart-items {
+  width: 64rem;
+  margin-bottom: 30px;
+}
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  background-color: #fff;
+  color: #101750;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+}
+.cart-item:hover {
+  transform: scale(1.03);
+}
+.cart-item img {
+  border-radius: 4px;
+  width: 149px;
+  height: 104px;
+}
+.cart-item p,
+.cart-item .quantity-btn {
+  color: #101750;
+}
+.cart-item-remove {
+  width: 3.2rem;
+  height: 3.2rem;
+  border: none;
+  background-color: #FB2E86;
+  color: #fff;
+  border-radius: 8px;
+}
+.cart-item-total {
+  color: #101750;
+}
+.cart .clear-cart {
+  margin-top: 20px;
+  background-color: #ff4500;
+  color: white;
+  border: none;
+  padding: 15px 25px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  transition: background-color 0.3s ease;
+}
+.cart .clear-cart:hover {
+  background-color: #e43a00;
+}
+
+.quantity {
+  padding: 0.7rem 1.7rem;
+}
+.quantity-container {
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  border: 1px solid #E5E0FC;
+}
+.quantity-btn {
+  width: 3.6rem;
+  height: 3.6rem;
+  border: none;
+  background-color: #fff;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.2s;
+}
+.quantity-btn:hover {
+  background-color: #ddd;
+}
+.quantity-btn:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
 .header {
   width: 100%;
 }
