--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -21,6 +21,7 @@
 @use "components/product-details";
 @use "components/related-products";
 @use "components/cart";
+@use "components/wishlist";
 
 @use "layout/header";
 @use "layout/footer";
