--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -149,9 +149,9 @@ body, * {
   height: 38rem;
 }
 
-.slick-dots {
+ul.slick-dots {
   position: absolute;
-  bottom: 3rem;
+  bottom: 2rem;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -229,6 +229,7 @@ body, * {
   margin-right: 0.3rem;
   padding: 8px;
   transition: all 0.3s;
+  cursor: pointer;
 }
 .carousel-four-cards-overlay .overlay-icon:hover {
   background-color: #E5E0FC;
@@ -1009,12 +1010,42 @@ body, * {
   border-radius: 4px;
   box-shadow: 8px 24px 32px -16px rgba(16, 23, 80, 0.15);
 }
+.product-card .floating-message {
+  position: absolute;
+  bottom: 4rem;
+  left: 55%;
+  padding: 10px;
+  background-color: #E5E0FC;
+  color: #101750;
+  border-radius: 25px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  animation: fade-in-out 1.5s ease-out;
+}
+@keyframes fade-in-out {
+  0% {
+    opacity: 0;
+    transform: translateX(-50%) translateY(-10px);
+  }
+  10% {
+    opacity: 1;
+    transform: translateX(-50%) translateY(0px);
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-50%) translateY(10px);
+  }
+}
 .product-card-description {
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 50rem;
 }
 .product-card.grid-view {
   width: 30rem;
@@ -1100,7 +1131,7 @@ body, * {
   justify-content: center;
   align-items: center;
   gap: 13rem;
-  padding: 10rem 0 14rem;
+  padding: 10rem 10rem 14rem;
 }
 .product-details-related {
   display: flex;
@@ -1225,6 +1256,9 @@ body, * {
 .product-details-info .star-empty path {
   color: #E5E0FC;
 }
+.product-details-info-description {
+  max-width: 50rem;
+}
 .product-details-info-prices {
   display: flex;
   gap: 1.5rem;
@@ -1246,6 +1280,12 @@ body, * {
   align-items: center;
   gap: 4rem;
   margin-top: 5rem;
+}
+.product-details-info-button .heart-empty path {
+  background-color: transparent;
+}
+.product-details-info-button .heart-filled path {
+  background-color: red;
 }
 .product-details-info-button svg path {
   color: #101750;
@@ -1470,20 +1510,6 @@ body, * {
 .cart-item-total {
   color: #101750;
 }
-.cart .clear-cart {
-  margin-top: 20px;
-  background-color: #ff4500;
-  color: white;
-  border: none;
-  padding: 15px 25px;
-  border-radius: 8px;
-  cursor: pointer;
-  font-size: 1.2rem;
-  transition: background-color 0.3s ease;
-}
-.cart .clear-cart:hover {
-  background-color: #e43a00;
-}
 
 .quantity {
   padding: 0.7rem 1.7rem;
@@ -1511,6 +1537,136 @@ body, * {
   cursor: not-allowed;
 }
 
+.wishlist-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  padding: 10rem 0;
+}
+.wishlist-prices {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.wishlist-prices-new {
+  color: #101750;
+}
+.wishlist-prices-old {
+  text-decoration: line-through;
+}
+.wishlist-empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+.wishlist-empty-button {
+  margin-top: 2rem;
+  border-radius: 8px;
+  padding: 16px 40px;
+  background-color: #FB2E86;
+  color: #fff;
+  border: 1px solid #FB2E86;
+  transition: all 0.3s;
+}
+.wishlist-empty-button:hover {
+  background-color: #fff;
+  color: #FB2E86;
+}
+.wishlist-content {
+  display: flex;
+  gap: 13rem;
+  display: flex;
+}
+.wishlist-items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+.wishlist-item {
+  padding: 1rem;
+  width: 30rem;
+  height: 44.8rem;
+  display: flex;
+  flex-direction: column;
+  color: #333;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+}
+.wishlist-item:hover {
+  transform: scale(1.03);
+}
+.wishlist-item-rating .star {
+  width: 1.6rem;
+  height: 1.6rem;
+  margin-right: 0.8rem;
+}
+.wishlist-item-rating .star-filled path {
+  color: #F9BA00;
+}
+.wishlist-item-rating .star-empty path {
+  color: #E5E0FC;
+}
+.wishlist-item-icons {
+  margin-top: 0;
+}
+.wishlist-item-description {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 4.8rem;
+}
+.wishlist-item-image {
+  border-radius: 4px;
+  height: 20rem;
+  min-width: 28.8rem;
+  margin-bottom: 1.5rem;
+}
+.wishlist-item-image img {
+  border-radius: 4px;
+  height: 20rem;
+  width: 28.8rem;
+  object-fit: cover;
+}
+.wishlist-item-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-bottom: 1.5rem;
+}
+.wishlist-item-details {
+  display: flex;
+  flex-direction: column;
+}
+.wishlist-item-description {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 4.8rem;
+}
+.wishlist-item-remove {
+  margin-top: 1rem;
+  background-color: #FB2E86;
+  color: #fff;
+  padding: 0.6rem 1rem;
+  border-radius: 8px;
+  border: 1px solid #FB2E86;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.wishlist-item-remove:hover {
+  color: #FB2E86;
+  background-color: #fff;
+}
+
 .header {
   width: 100%;
 }
@@ -1534,6 +1690,7 @@ body, * {
   background-color: #7E33E0;
   border: none;
   border-radius: 5px;
+  z-index: 5;
 }
 .header-dropdown-element {
   color: #fff;
@@ -1624,8 +1781,59 @@ body, * {
   color: #FB2E86;
 }
 .header-bottom-right {
+  position: relative;
   display: flex;
   align-items: center;
+}
+.header-bottom-right .search-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+  max-height: 30rem;
+  overflow-y: auto;
+  z-index: 2;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.header-bottom-right .search-dropdown .search-result-item {
+  padding: 1rem;
+  border-bottom: 1px solid #ddd;
+  cursor: pointer;
+  display: flex;
+  gap: 2rem;
+}
+.header-bottom-right .search-dropdown .search-result-item:hover {
+  background-color: #f0f0f0;
+}
+.header-bottom-right .search-dropdown .search-result-item-image {
+  border-radius: 4px;
+  width: 149px;
+  height: 104px;
+}
+.header-bottom-right .search-dropdown .search-result-item-image img {
+  border-radius: 4px;
+  width: 149px;
+  height: 104px;
+  object-fit: cover;
+}
+.header-bottom-right .search-dropdown .search-result-item .search-prices {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.header-bottom-right .search-dropdown .search-result-item .search-prices-new {
+  color: #FB2E86;
+}
+.header-bottom-right .search-dropdown .search-result-item .search-prices-old {
+  text-decoration: line-through;
+}
+.header-bottom-right .search-dropdown .search-result-item-text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .header-bottom-right .search-container {
   display: flex;
