--- a/src/styles/sass/components/_carousel-four.scss
+++ b/src/styles/sass/components/_carousel-four.scss
@@ -65,6 +65,7 @@
         margin-right: 0.3rem;
         padding: 8px;
         transition: all .3s;
+        cursor: pointer;
 
         &:hover{
             background-color: $color-grey-2;
