--- a/src/styles/sass/components/_carousel.scss
+++ b/src/styles/sass/components/_carousel.scss
@@ -63,9 +63,9 @@
   }
 }
 
-.slick-dots {
+ul.slick-dots {
   position: absolute;
-  bottom: 3rem;
+  bottom: 2rem;
   width: 100%;
   display: flex;
   justify-content: center;
