--- a/src/styles/sass/components/_product-details.scss
+++ b/src/styles/sass/components/_product-details.scss
@@ -7,7 +7,8 @@
     align-items: center;
     gap: 13rem;
 
-    padding: 10rem 0 14rem;
+
+    padding: 10rem 10rem 14rem;
   }
 
   &-related {
@@ -165,6 +166,10 @@
       }
     }
 
+    &-description{
+      max-width: 50rem;
+    }
+
     &-prices {
       display: flex;
       gap: 1.5rem;
@@ -190,6 +195,14 @@
       align-items: center;
       gap: 4rem;
       margin-top: 5rem;
+
+      .heart-empty path {
+        background-color: transparent;
+      }
+      
+      .heart-filled  path{
+        background-color: red; 
+      }
 
       svg {
         path {
@@ -218,3 +231,4 @@
     }
   }
 }
+
