--- a/src/styles/sass/layout/_header.scss
+++ b/src/styles/sass/layout/_header.scss
@@ -14,6 +14,7 @@
       color: white;
     }
   }
+
   .currency,
   .language {
     position: relative;
@@ -27,6 +28,8 @@
 
     border: none;
     border-radius: 5px;
+
+    z-index: 5;
 
     &-element {
       color: $color-white;
@@ -132,11 +135,68 @@
     }
 
     &-right {
+      position: relative;
       display: flex;
       align-items: center;
+      .search-dropdown {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: $color-white;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        width: 100%;
+        max-height: 30rem;
+        overflow-y: auto;
+        z-index: 2;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+        .search-result-item {
+          padding: 1rem;
+          border-bottom: 1px solid #ddd;
+          cursor: pointer;
+          display: flex;
+          gap:2rem;
+
+          &:hover {
+            background-color: #f0f0f0;
+          }
+
+          &-image {
+            border-radius: 4px;
+            width: 149px;
+            height: 104px;
+            img {
+              border-radius: 4px;
+              width: 149px;
+              height: 104px;
+              object-fit: cover;
+            }
+          }
+          .search-prices {
+            display: flex;
+
+            align-items: center;
+            gap: 1rem;
+            &-new {
+              color: $color-primary;
+            }
+            &-old {
+              text-decoration: line-through;
+            }
+          }
+
+          &-text {
+            display: flex;
+            flex-direction: column;
+            gap:1rem;
+          }
+        }
+      }
 
       .search-container {
         display: flex;
+
         align-items: center;
         gap: 10px;
 
